# anime-filename-parser

./: Cargo.toml
src/: lib.rs  main.rs  metadata.rs
src/parsers/: mod.rs  pre_parser.rs  proxy_parser.rs
src/parsers/submitter/: mod.rs  ohys_raws_parser.rs
