[package]
name = "anime-filename-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "anime_filename_parser"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
error-stack = "0.3.1"
lazy_static = "1.4.0"
regex = "1.7.1"
typed-builder = "0.12.0"
